[gd_scene load_steps=7 format=2]

[ext_resource path="res://tilesets/snake.png" type="Texture" id=1]
[ext_resource path="res://snake/snake_head.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 35.0

[sub_resource type="Animation" id=2]
resource_name = "not_shake"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SweatSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "shake"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 0.293167, -0.293175 ), Vector2( -0.517156, 0.441658 ), Vector2( 0.157123, -0.414948 ), Vector2( 0.160981, 0.398847 ), Vector2( -0.396148, -0.427086 ), Vector2( 0.469431, 0.607173 ), Vector2( -0.128601, -0.365337 ), Vector2( -0.0232343, 0.628016 ), Vector2( -0.488317, -0.186541 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SweatSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "shake2"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 0.923126, -1.23811 ), Vector2( -0.989629, 1.07162 ), Vector2( -0.0791137, -1.28114 ), Vector2( 0.554703, 1.34379 ), Vector2( -0.789875, -1.21454 ), Vector2( 0.863157, 1.31588 ), Vector2( -0.91605, -1.07404 ), Vector2( 0.291745, 1.10049 ), Vector2( -1.43326, -0.816504 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SweatSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SweatSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( -0.353554, 0.265165 ), Vector2( 0.304451, 0.589256 ), Vector2( -0.705876, 0.515599 ), Vector2( -0.0747062, -0.441942 ), Vector2( -0.415805, -0.0147314 ), Vector2( 0.37446, -0.0117851 ), Vector2( -0.161099, -0.274006 ), Vector2( -0.284176, 0.25927 ), Vector2( 0.388242, 0.0412444 ) ]
}

[node name="SnakeHead" type="Area2D"]
collision_mask = 12
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0, 6 )
region_enabled = true
region_rect = Rect2( 0, 0, 80, 91 )
__meta__ = {
"_edit_lock_": true
}

[node name="SweatSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
offset = Vector2( -4, 4 )
region_enabled = true
region_rect = Rect2( 0, 182, 80, 91 )

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ShakePlayer" type="AnimationPlayer" parent="."]
anims/not_shake = SubResource( 2 )
anims/shake = SubResource( 3 )
anims/shake2 = SubResource( 4 )
